--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "styled-components": "^5.3.10",
     "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.4"
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@netlify/plugin-sitemap": "^0.8.1"
   }
 }
